# SpotlightSaver

./: README.md  pyproject.toml
src/spotlight_saver/: __init__.py  cli.py  controller.py
